Ch 15 smart pointer WIP : Rev 3

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers_wip.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers_wip.ipynb
@@ -302,7 +302,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- Cons List Psuedo Code Example --\n",
+    "#### -- Cons List Pseudo Code Example --\n",
     "\n",
     "For example, here’s a pseudocode representation of a cons list containing the  \n",
     "list 1, 2, 3 with each pair in parentheses:  \n",
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -439,18 +439,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "list = Cons(1, Cons(2, Cons(3, Nil)))\n"
+      "list = Cons(1, Cons(2, Cons(3, Nil)))\n",
+      "Dropping Cons with value 1 -> next Cons(2, Cons(3, Nil))\n",
+      "Dropping Cons with value 2 -> next Cons(3, Nil)\n",
+      "Dropping Cons with value 3 -> next Nil\n",
+      "Dropping Nil\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -473,6 +467,16 @@
     "    // Nil variant represents an empty list\n",
     "    // Essentially the EOF (end of file) equivalent for Cons List\n",
     "    Nil,\n",
+    "}\n",
+    "\n",
+    "impl Drop for List {\n",
+    "    fn drop(&mut self){\n",
+    "        match self{\n",
+    "            Cons (value, next) => println!(\"Dropping Cons with value {} -> next {:?}\", value, next),\n",
+    "            Nil => println!(\"Dropping Nil\"),\n",
+    "        }\n",
+    "        // println!(\"Dropping {:?}\", self);\n",
+    "    }\n",
     "}\n",
     "\n",
     "    // push new frame to the stack\n",
@@ -545,7 +549,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### -- Illustrate Recursion Without Indirection : Compile Time Error --\n",
+    "#### -- Illustrate Recursion (-)Indirection : Compile Time Error --\n",
     "\n",
     "Contrast this with what happens when Rust tries to determine how much space a  \n",
     "recursive type like the List enum in Listing 15-2 needs. The compiler starts by  \n",
@@ -588,6 +592,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- `Box<T>` the pointer is Fixed Size regardless of Data --\n",
+    "\n",
     "Because a Box<T> is a pointer, Rust always knows how much space a Box<T> needs:  \n",
     "a pointer’s size doesn’t change based on the amount of data it’s pointing to.  \n",
     "This means we can put a Box<T> inside the Cons variant instead of another List  \n",
@@ -604,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -615,7 +621,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Box<List> list = Cons(1, Cons(2, Cons(3, Nil)))\n"
+      "Box<List> list = Cons(1, Cons(2, Cons(3, Nil)))\n",
+      "Dropping List: Cons(1, Cons(2, Cons(3, Nil)))\n",
+      "Dropping List: Cons(2, Cons(3, Nil))\n",
+      "Dropping List: Cons(3, Nil)\n",
+      "Dropping List: Nil\n"
      ]
     },
     {
@@ -624,19 +634,25 @@
        "()"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "use crate::List::{Cons, Nil};\n",
+    "\n",
     "#[derive(Debug)]\n",
     "enum List{\n",
     "    Cons(i32, Box<List>),\n",
     "    Nil,\n",
     "}\n",
     "\n",
-    "use crate::List::{Cons, Nil};\n",
+    "impl Drop for List{\n",
+    "    fn drop(&mut self){\n",
+    "        println!(\"Dropping List: {:?}\", self);\n",
+    "    }\n",
+    "}\n",
     "\n",
     "{\n",
     "    let list = Cons(1, Box::new(Cons(2, Box::new(Cons(3, Box::new(Nil))))));\n",
@@ -649,7 +665,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
+    "###### -- [GPT Ask] --\n",
+    "***\n",
+    "\n",
+    "> Dropping List: Cons(1, Cons(2, Cons(3, Nil)))  \n",
+    "Dropping List: Cons(2, Cons(3, Nil))  \n",
+    "Dropping List: Cons(3, Nil)  \n",
+    "Dropping List: Nil  \n",
+    "\n",
+    "> Explain the drop ORDER ^\n",
+    "\n",
+    "In the given code, the `List` enum is created using the `Cons` variant, which  \n",
+    "contains an `i32` value and a `Box<List>`. The `list` is built using nested  \n",
+    "`Cons` variants, each containing a boxed tail of the list:\n",
+    "\n",
+    "```rust\n",
+    "let list = Cons(1, Box::new(Cons(2, Box::new(Cons(3, Box::new(Nil))))));\n",
+    "```\n",
+    "\n",
+    "This `list` can be visualized as follows:\n",
+    "\n",
+    "```rust\n",
+    "Cons(1) -> Cons(2) -> Cons(3) -> Nil\n",
+    "```\n",
+    "\n",
+    "The `Drop` trait is implemented for the `List` enum. When the `list` goes out of  \n",
+    "scope at the end of the `main` function, the `drop` method is called for each  \n",
+    "element of the list, starting from the outermost `Cons` variant and working its  \n",
+    "way inwards.\n",
+    "\n",
+    "The drop order can be understood by analyzing how the list is stored in memory  \n",
+    "and how the ownership of the boxed tails works:\n",
+    "\n",
+    "1. When `list` goes out of scope, the `drop` method is called for the outermost  \n",
+    "`Cons` variant containing the value `1`. This prints the message \"Dropping Cons  \n",
+    "with value 1\". The ownership of the boxed tail (Cons(2, Cons(3, Nil))) is  \n",
+    "transferred to the `drop` method.\n",
+    "\n",
+    "2. Now, the `drop` method is called for the next `Cons` variant containing the  \n",
+    "value `2`. This prints the message \"Dropping Cons with value 2\". The ownership  \n",
+    "of the boxed tail (Cons(3, Nil)) is transferred to the `drop` method.\n",
+    "\n",
+    "3. The `drop` method is called for the next `Cons` variant containing the value  \n",
+    "`3`. This prints the message \"Dropping Cons with value 3\". The ownership of the  \n",
+    "boxed tail (Nil) is transferred to the `drop` method.\n",
+    "\n",
+    "4. Finally, the `drop` method is called for the `Nil` variant. This prints the  \n",
+    "message \"Dropping Nil\".\n",
+    "\n",
+    "The drop order follows the nested structure of the list, as each `Cons` element  \n",
+    "owns a boxed tail, and the drop method is called recursively for each owned  \n",
+    "tail. As a result, the drop order is:\n",
+    "\n",
+    "```\n",
+    "Dropping List: Cons(1, Cons(2, Cons(3, Nil)))\n",
+    "Dropping List: Cons(2, Cons(3, Nil))\n",
+    "Dropping List: Cons(3, Nil)\n",
+    "Dropping List: Nil\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "> Listing 15-5: Definition of List that uses Box<T> in order to have a known size\n",
+    "\n",
+    "#### -- Box breaks Recursive Chain => Indexed Chain --\n",
     "\n",
     "The Cons variant needs the size of an i32 plus the space to store the box’s  \n",
     "pointer data. The Nil variant stores no values, so it needs less space than the  \n",
@@ -667,6 +751,8 @@
    "metadata": {},
    "source": [
     "> Figure 15-2: A List that is not infinitely sized because Cons holds a Box\n",
+    "\n",
+    "#### -- Illustrate Recursion (+) Indirection : Compiles Ok --\n",
     "\n",
     "Boxes provide only the indirection and heap allocation; they don’t have any  \n",
     "other special capabilities, like those we’ll see with the other smart pointer  \n",
@@ -718,17 +804,17 @@
    "source": [
     "### Following the Pointer to the Value\n",
     "\n",
-    "A regular reference is a type of pointer, and one way to think of a pointer is  \n",
-    "as an arrow to a value stored somewhere else. In Listing 15-6, we create a  \n",
-    "reference to an i32 value and then use the dereference operator to follow the  \n",
-    "reference to the value:\n",
+    "A regular `reference` is a type of pointer, and one way to think of a pointer is  \n",
+    "as an `arrow to a value stored somewhere` else. In Listing 15-6, we create a  \n",
+    "`reference` to an `i32` value and then use the `dereference` operator to  \n",
+    "`follow` the `reference` to the `value`:\n",
     "\n",
     "> Filename: src/main.rs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -741,7 +827,7 @@
        "()"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,12 +848,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The variable x holds an i32 value 5. We set y equal to a reference to x. We can  \n",
-    "assert that x is equal to 5. However, if we want to make an assertion about the  \n",
-    "value in y, we have to use *y to follow the reference to the value it’s pointing  \n",
-    "to (hence dereference) so the compiler can compare the actual value. Once we  \n",
-    "dereference y, we have access to the integer value y is pointing to that we can  \n",
-    "compare with 5.\n",
+    "#### -- Line by Line Assert Pointer, Dereference and their Value --\n",
+    "\n",
+    "Line by line explanation :\n",
+    "\n",
+    "- The variable x holds an i32 `value` 5. \n",
+    "- We set y equal to a `reference` to x. \n",
+    "\n",
+    "We can assert that : \n",
+    "- x is equal to 5.  \n",
+    "\n",
+    "However, if we want to make an assertion about the value in y :  \n",
+    "- we have to use `*y` to `follow the reference to the value` it’s pointing  \n",
+    "to (hence dereference) so the compiler can compare the actual value. \n",
+    "\n",
+    "Once we `dereference y`, we have access to the integer value y is pointing to : \n",
+    "- we can `compare with 5`\n",
     "\n",
     "If we tried to write assert_eq!(5, y); instead, we would get this compilation  \n",
     "error:\n",
@@ -799,7 +895,7 @@
     "error: could not compile `deref-example` due to previous error\n",
     "```\n",
     "\n",
-    "Comparing a number and a reference to a number isn’t allowed because they’re  \n",
+    "> Comparing a number and a reference to a number isn’t allowed because they’re  \n",
     "different types. We **must use the dereference operator to follow** the reference  \n",
     "to the **value it’s pointing to**."
    ]
@@ -820,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "vscode": {
      "languageId": "rust"
@@ -833,7 +929,7 @@
        "()"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,10 +937,14 @@
    "source": [
     "{\n",
     "    let x = 5;\n",
-    "    let y = Box::new(x); // y is changed from a pointer to a Box reference\n",
+    "    let y = Box::new(x); // y is a Box containing the value of x\n",
     "\n",
-    "    assert_eq!(5, x);\n",
-    "    assert_eq!(5, *y);  // we get the same value 5 with Box::new(x) as with &x \n",
+    "    assert_eq!(5, x);   // x still has it's original value\n",
+    "    assert_eq!(5, *y);  // *y dereferences the Box, giving us the value stored inside\n",
+    "\n",
+    "    // This also works because z is assigned a Box containing the value 5 DIRECTLY\n",
+    "    let z = Box::new(5);\n",
+    "    assert_eq!(5, *z);   // z dereferences the Box, giving us the value stored inside\n",
     "}"
    ]
   },
@@ -855,12 +955,65 @@
    "source": [
     "> Listing 15-7: Using the dereference operator on a Box<i32>\n",
     "\n",
+    "#### -- Difference between Box and Reference Example --\n",
+    "\n",
     "The main difference between Listing 15-7 and Listing 15-6 is that here we set y  \n",
     "to be an instance of a Box<T> pointing to a copied value of x rather than a  \n",
     "reference pointing to the value of x. In the last assertion, we can use the  \n",
     "dereference operator to follow the pointer of the Box<T> in the same way that  \n",
     "we did when y was a reference. Next, we’ll explore what is special about Box<T>  \n",
     "that enables us to use the dereference operator by defining our own type."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "###### -- [GPT Ask] --\n",
+    "***\n",
+    "\n",
+    "> Can you explain the difference between a Box and a reference?\n",
+    "\n",
+    "Certainly! Both `Box` and references (`&` and `&mut`) in Rust are used for  \n",
+    "working with data indirectly, but they serve different purposes and have  \n",
+    "different properties. Here's a brief explanation of the differences between a  \n",
+    "`Box` and a reference:\n",
+    "\n",
+    "1. **Ownership and lifetime:** A `Box` is a smart pointer that owns the data it  \n",
+    "points to and is responsible for deallocating the memory when it goes out of  \n",
+    "scope. References, on the other hand, do not own the data they point to and do  \n",
+    "not deallocate memory. Instead, they \"borrow\" the data from the owner  \n",
+    "temporarily, and their lifetimes are bound to the scope of the owner.\n",
+    "\n",
+    "2. **Heap allocation:** A `Box` always allocates its data on the heap, which is  \n",
+    "suitable for large or dynamically sized data structures. References do not  \n",
+    "allocate memory themselves; they point to data that may be stored on the stack  \n",
+    "or the heap, depending on the original owner.\n",
+    "\n",
+    "3. **Mutability:** A `Box` allows mutable access to the data it owns if it is  \n",
+    "declared as mutable (e.g., `let mut x = Box::new(5)`). References can be either  \n",
+    "mutable (`&mut`) or immutable (`&`), but the mutable references follow Rust's  \n",
+    "borrowing rules, which prevent multiple mutable references or a mix of mutable  \n",
+    "and immutable references to the same data simultaneously. This ensures memory  \n",
+    "safety and prevents data races.\n",
+    "\n",
+    "4. **Dereferencing:** Both `Box` and references can be dereferenced to access  \n",
+    "the underlying data. With a `Box`, you use the `*` operator to dereference  \n",
+    "(e.g., `*my_box`), and you do the same with references (e.g., `*my_ref`).\n",
+    "\n",
+    "5. **Use cases:** A `Box` is often used for heap-allocated data, recursive data  \n",
+    "structures, or when transferring ownership of data between different parts of  \n",
+    "the code. References, on the other hand, are used for temporarily borrowing data  \n",
+    "without transferring ownership. This allows for more flexible and safe  \n",
+    "interactions with data, following Rust's borrowing rules.\n",
+    "\n",
+    "In summary, a `Box` is a smart pointer that owns the data it points to and  \n",
+    "allocates it on the heap, while references are a way to temporarily borrow data  \n",
+    "without taking ownership. Both can be used to work with data indirectly, but  \n",
+    "their properties and use cases are different, depending on the needs of your  \n",
+    "program."
    ]
   },
   {
