Ch 15 smart pointer WIP : Rev 5

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers_wip.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers_wip.ipynb
@@ -196,16 +196,6 @@
      "text": [
       "b = 5\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "()"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -213,19 +203,21 @@
     "{   // closure begin\n",
     "    \n",
     "    let b = Box::new(5);   // the value 5 is allocated on the heap\n",
-    "                           // `b `is box pointer allocated on the stack pointing\n",
-    "                           // to the heap location where (address) value 5 is \n",
-    "                           // stored\n",
-    "    println!(\"b = {}\", b);  // prinln is accessing 'b' by dereferencing it\n",
-    "                            // `b` is a pointer to the heap location where the\n",
-    "                            // value 5 is stored\n",
-    "                            // effectively value 5 is printed\n",
+    "                           // `b `is a box pointer allocated on the stack \n",
+    "                           // pointing to the heap location where value 5 is \n",
+    "                           // stored (it's address)\n",
+    "    println!(\"b = {}\", b);  // println! is accessing 'b' and automatccally \n",
+    "                            // dereferencing it to access the value 5\n",
+    "                            // @audit : why didn't we need to dereference `b`?\n",
+    "                            // ANSWER : println! the macro automatically \n",
+    "                            // dereferences the box pointer `b` to access the\n",
+    "                            // value 5 stored on the heap\n",
     "    // - storing a single compile time known value on the heap is not very useful\n",
     "    // - storing on the heap is more useful in later examples when we store much\n",
     "    // LARGER and VARIABLE amounts of data on the heap\n",
     "\n",
     "}   // closure ends\n",
-    "// the Box pointer `b` is deallocated\n",
+    "// the Box pointer `b` goes out of scope and is deallocated\n",
     "// the heap memory address where the value 5 is stored is deallocated\n",
     "// closure is popped off the stack"
    ]
@@ -579,12 +571,27 @@
     "#### -- `Box<T>` the pointer is Fixed Size regardless of Data --\n",
     "\n",
     "Because a Box<T> is a pointer, Rust always knows how much space a Box<T> needs:  \n",
-    "a pointer’s size doesn’t change based on the amount of data it’s pointing to.  \n",
+    "\n",
+    "- a pointer’s size doesn’t change based on the amount of data it’s pointing to.  \n",
+    "\n",
     "This means we can put a Box<T> inside the Cons variant instead of another List  \n",
     "value directly. The Box<T> will point to the next List value that will be on the  \n",
-    "heap rather than inside the Cons variant. Conceptually, we still have a list,  \n",
-    "created with lists holding other lists, but this implementation is now more like  \n",
-    "placing the items next to one another rather than inside one another.  \n",
+    "heap rather than inside the Cons variant.  \n",
+    "\n",
+    "Conceptually, we still have a list, created with lists holding other lists, but  \n",
+    "this implementation is now more like placing the items next to one another  \n",
+    "rather than inside one another.  \n",
+    "\n",
+    "> This implementation solves calculating the size for the List enum :\n",
+    "```rust\n",
+    "enum List{\n",
+    "    Cons(i32, Box<List>),   // i32 == 4 bytes (32 bits)\n",
+    "                            // Box<List> == 4 bytes (32 bits)\n",
+    "                            // 8 bytes total (if system is 32 bits)\n",
+    "    Nil,                    // Doesn't need any space\n",
+    "}\n",
+    "\n",
+    "```\n",
     "\n",
     "We can change the definition of the List enum in Listing 15-2 and the usage of  \n",
     "the List in Listing 15-3 to the code in Listing 15-5, which will compile:  \n",
