Ch 15 smart pointer WIP : Rev 6

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers_wip.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers_wip.ipynb
@@ -66,7 +66,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -187,14 +191,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "b = 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c = 7\n"
      ]
     }
    ],
@@ -215,6 +230,10 @@
     "    // - storing a single compile time known value on the heap is not very useful\n",
     "    // - storing on the heap is more useful in later examples when we store much\n",
     "    // LARGER and VARIABLE amounts of data on the heap\n",
+    "\n",
+    "    let c = *b + 2; // Here we are manually dereferencing the box pointer `b`\n",
+    "                    // to access the value 5 stored on the heap\n",
+    "    println!(\"c = {}\", c);\n",
     "\n",
     "}   // closure ends\n",
     "// the Box pointer `b` goes out of scope and is deallocated\n",
@@ -326,7 +345,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -409,7 +432,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -602,7 +629,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -802,7 +833,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -899,8 +934,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -908,7 +947,7 @@
        "()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,8 +1055,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "#[derive(Debug)]\n",
@@ -1054,7 +1097,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "ename": "Error",
@@ -1131,8 +1178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1167,8 +1218,12 @@
     "\n",
     "// @audit-ok : why is there an error when I run this cell twice?\n",
     "// ANSWER : We need to clear the previous implementation of Deref\n",
-    "// REPL we need to reset manually -> Developer : Reload Window\n",
-    "// Actually can be closured ..."
+    "// - REPL we need to reset manually -> Developer : Reload Window\n",
+    "// Running the cell twice in Jupyter produces an error due to CONFLICTING\n",
+    "// implementation of the Deref trait for MyBox<T>\n",
+    "// Jupyter stores the trait between cell execution so the previous Deref impl<>\n",
+    "// remains in sccope and conflicts with the new Deref impl<> \n",
+    "// Fundamentally the impl<> must be unique"
    ]
   },
   {
@@ -1291,7 +1346,11 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [],
    "source": [
     "fn hello(name: &str) {\n",
@@ -1316,7 +1375,11 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1369,7 +1432,11 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1507,7 +1574,11 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "rust"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1564,7 +1635,7 @@
    "codemirror_mode": "rust",
    "file_extension": ".rs",
    "mimetype": "text/rust",
-   "name": "rust",
+   "name": "Rust",
    "pygment_lexer": "rust",
    "version": ""
   },
