Ch 15 smart pointer WIP : Rev 9 Refeeding

--- a/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
+++ b/rusty_jeep_project/rust_the_book_exercise/jupyter_rust/ch_15_smart_pointers.ipynb
@@ -930,11 +930,15 @@
     "    let y = Box::new(x); // y is a Box containing the value of x\n",
     "\n",
     "    assert_eq!(5, x);   // x still has it's original value\n",
-    "    assert_eq!(5, *y);  // *y dereferences the Box, giving us the value stored inside\n",
+    "    assert_eq!(5, *y);  // *y dereferences the Box, following the pointer to \n",
+    "                        // access the underlying value\n",
+    "                        // The deref operation goes through MULTIPLE levels:\n",
+    "                        // y -> *Box -> *x -> 5\n",
     "\n",
-    "    // This also works because z is assigned a Box containing the value 5 DIRECTLY\n",
     "    let z = Box::new(5);\n",
-    "    assert_eq!(5, *z);   // z dereferences the Box, giving us the value stored inside\n",
+    "    assert_eq!(5, *z);  // Since z contains a Box with the value 5 directly ...\n",
+    "                        // dereferencing takes less steps than y :\n",
+    "                        // z -> *Box -> 5\n",
     "}"
    ]
   },
@@ -1461,9 +1465,9 @@
    "source": [
     "### How Deref Coercion Interacts with Mutability\n",
     "\n",
-    "Similar to how you use the Deref trait to override the * operator on immutable  \n",
-    "references, you can use the DerefMut trait to override the * operator on mutable  \n",
-    "references.\n",
+    "Similar to how you use the **`Deref`** trait to override **`the * operator`** on  \n",
+    "**`immutable references`**, you can use the **`DerefMut`** trait to  \n",
+    "**`override the * operator`** on **`mutable references`**.\n",
     "\n",
     "Rust does deref coercion when it finds types and trait implementations in three  \n",
     "cases:\n",
@@ -1474,18 +1478,33 @@
     "The first two cases are the same as each other except that the second implements  \n",
     "mutability. The first case states that if you have a &T, and T implements Deref  \n",
     "to some type U, you can get a &U transparently. The second case states that the  \n",
-    "same deref coercion happens for mutable references.\n",
+    "same deref coercion happens for mutable references."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Immutable Ref can NOT be COERCED to Mutable Ref\n",
     "\n",
-    "The third case is trickier: Rust will also coerce a mutable reference to an  \n",
-    "immutable one. But the reverse is not possible: immutable references will never  \n",
-    "coerce to mutable references. Because of the borrowing rules, if you have a  \n",
-    "mutable reference, that mutable reference must be the only reference to that  \n",
-    "data (otherwise, the program wouldn’t compile). Converting one mutable reference  \n",
-    "to one immutable reference will never break the borrowing rules. Converting an  \n",
-    "immutable reference to a mutable reference would require that the initial  \n",
-    "immutable reference is the only immutable reference to that data, but the  \n",
-    "borrowing rules don’t guarantee that. Therefore, Rust can’t make the assumption  \n",
-    "that converting an immutable reference to a mutable reference is possible."
+    "The third case is trickier: \n",
+    "\n",
+    "- Rust will also coerce a mutable reference to an immutable one. \n",
+    "- But the reverse is not possible: immutable references will never coerce to  \n",
+    "mutable references. \n",
+    "\n",
+    "Because of the borrowing rules, if you have a mutable reference, that mutable  \n",
+    "reference must be the only reference to that data (otherwise, the program  \n",
+    "wouldn’t compile). \n",
+    "\n",
+    "Converting one mutable reference to one immutable reference will never break  \n",
+    "the borrowing rules. Converting an immutable reference to a mutable reference  \n",
+    "would require that the initial immutable reference is the only immutable  \n",
+    "reference to that data, but the borrowing rules don’t guarantee that. \n",
+    "\n",
+    "> Therefore, Rust can NOT make the assumption that converting an immutable  \n",
+    "reference to a mutable reference is possible."
    ]
   },
   {
@@ -1512,6 +1531,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Drop @ Scope End >>> Manually Tracked Drop --\n",
+    "\n",
     "In some languages, for some types, the programmer must call code to free memory  \n",
     "or resources every time they finish using an instance of those types. Examples  \n",
     "include file handles, sockets, or locks. If they forget, the system might become  \n",
@@ -1527,6 +1548,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Impl Drop trait => { // clean up code .. } --\n",
+    "\n",
     "You specify the code to run when a value goes out of scope by implementing the  \n",
     "Drop trait. The Drop trait requires you to implement one method named drop that  \n",
     "takes a mutable reference to self. To see when Rust calls drop, let’s implement  \n",
@@ -1541,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1582,7 @@
        "()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1597,6 +1620,8 @@
     "Listing 15-14: A `CustomSmartPointer` struct that implements the `Drop` trait  \n",
     "where we would put our cleanup code\n",
     "\n",
+    "#### -- Example cleanup code => { print @ drop } --\n",
+    "\n",
     "The `Drop` trait is included in the prelude, so we don’t need to bring it into  \n",
     "scope. We implement the `Drop` trait on `CustomSmartPointer` and provide an  \n",
     "implementation for the drop method that calls println!. The body of the drop  \n",
@@ -1610,6 +1635,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Line by line tracking of scope and drop events --\n",
+    "\n",
     "In main, we create two instances of `CustomSmartPointer` and then print  \n",
     "`CustomSmartPointers` created. At the end of main, our instances of  \n",
     "`CustomSmartPointer` will go out of scope, and Rust will call the code we put  \n",
@@ -1629,10 +1656,16 @@
     "```\n",
     "\n",
     "Rust automatically called drop for us when our instances went out of scope,  \n",
-    "calling the code we specified. Variables are dropped in the reverse order of  \n",
-    "their creation, so `d` was dropped before `c`. This example’s purpose is to  \n",
-    "give you a visual guide to how the drop method works; usually you would specify  \n",
-    "the cleanup code that your type needs to run rather than a print message."
+    "calling the code we specified.  \n",
+    "\n",
+    "Variables are dropped in the reverse order of their creation, so :  \n",
+    "\n",
+    "- `d` was dropped \n",
+    "- before `c` \n",
+    "\n",
+    "> This example’s purpose is to give you a visual guide to how the drop method  \n",
+    "works; usually you would specify the cleanup code that your type needs to run  \n",
+    "rather than a print message."
    ]
   },
   {
@@ -1643,18 +1676,26 @@
     "### Dropping a Value Early with `std::mem::drop`\n",
     "\n",
     "Unfortunately, it’s not straightforward to disable the automatic drop  \n",
-    "functionality. Disabling drop isn’t usually necessary; the whole point of the  \n",
-    "`Drop` trait is that it’s taken care of automatically. Occasionally, however,  \n",
-    "you might want to clean up a value early. One example is when using smart  \n",
-    "pointers that manage locks: you might want to force the drop method that  \n",
-    "releases the lock so that other code in the same scope can acquire the lock.  \n",
-    "Rust doesn’t let you call the Drop trait’s drop method manually; instead you  \n",
-    "have to call the std::mem::drop function provided by the standard library if you  \n",
-    "want to force a value to be dropped before the end of its scope.\n",
+    "functionality. Disabling drop isn’t usually necessary : \n",
     "\n",
-    "If we try to call the `Drop` trait’s drop method manually by modifying the main  \n",
-    "function from Listing 15-14, as shown in Listing 15-15, we’ll get a compiler  \n",
-    "error:\n",
+    "- The whole point of the **`Drop`** trait is that it’s taken care of automatically. \n",
+    "\n",
+    "Occasionally, however, you might want to clean up a value early. \n",
+    "\n",
+    "One example is when using smart pointers that manage locks: \n",
+    "\n",
+    "- You might want to force the drop method that releases the lock \n",
+    "- So that other code in the same scope can acquire the lock. \n",
+    "\n",
+    "#### -- Disabling Automatic Drop is more complex --\n",
+    "\n",
+    "Rust doesn’t let you call the Drop trait’s drop method manually; instead you  \n",
+    "have to call the **`std::mem::drop`** function provided by the standard  \n",
+    "library if you want to force a value to be dropped before the end of its scope.\n",
+    "\n",
+    "If we try to call the **`Drop`** trait’s drop method manually by modifying the  \n",
+    "main function from Listing 15-14, as shown in Listing 15-15, we’ll get a  \n",
+    "compiler error:\n",
     "\n",
     "> Filename: src/main.rs"
    ]
@@ -1720,9 +1761,11 @@
     "error: could not compile `drop-example` due to previous error\n",
     "```\n",
     "\n",
-    "This error message states that we’re not allowed to explicitly call drop. The  \n",
-    "error message uses the term destructor, which is the general programming term  \n",
-    "for a function that cleans up an instance. A destructor is analogous to a  \n",
+    "#### -- Manual Drop trait => Destructor Compile Error --\n",
+    "\n",
+    "This error message states that `we’re not allowed to explicitly call drop`.  \n",
+    "The error message uses the term destructor, which is the general programming  \n",
+    "term for a function that cleans up an instance. A destructor is analogous to a  \n",
     "constructor, which creates an instance. The drop function in Rust is one  \n",
     "particular destructor."
    ]
@@ -1732,6 +1775,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Double Free Error : if Drop trait are called manually --\n",
+    "\n",
     "Rust doesn’t let us call drop explicitly because Rust would still automatically  \n",
     "call drop on the value at the end of main. This would cause a double free error  \n",
     "because Rust would be trying to clean up the same value twice.\n",
@@ -1746,6 +1791,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- std::mem::drop is DIFFERENT from Drop trait --\n",
+    "\n",
     "The `std::mem::drop` function is `different from` the drop method in the  \n",
     "`Drop` trait. We call it by passing as an argument the value we want to force  \n",
     "drop. The function is in the prelude, so we can modify main in Listing 15-15 to  \n",
@@ -1798,6 +1845,8 @@
     "> Listing 15-16: Calling std::mem::drop to explicitly drop a value before it  \n",
     "goes out of scope\n",
     "\n",
+    "#### -- Line by line tracking of std::mem::drop example --\n",
+    "\n",
     "Running this code will print the following:\n",
     "\n",
     "```sh\n",
@@ -1821,6 +1870,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Drop trait : custom allocator built-in Ownership --\n",
+    "\n",
     "You can use code specified in a `Drop trait` implementation in many ways to  \n",
     "make cleanup convenient and safe: for instance, you could use it to create your  \n",
     "own memory allocator! With the `Drop trait` and Rust’s ownership system, you  \n",
@@ -1841,7 +1892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Rc<T>, The Reference Counted Smart Pointer\n",
+    "`Rc<T>` The Reference Counted Smart Pointer\n",
     "---\n",
     "\n",
     "In the majority of cases, ownership is clear: you know exactly which variable  \n",
@@ -1857,11 +1908,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- When a VALUE needs MULTIPLE OWNERS --\n",
+    "\n",
     "You have to enable multiple ownership explicitly by using the Rust type Rc<T>,  \n",
     "which is an abbreviation for reference counting. The Rc<T> type keeps track of  \n",
     "the number of references to a value to determine whether or not the value is  \n",
     "still in use. If there are zero references to a value, the value can be cleaned  \n",
-    "up without any references becoming invalid.\n",
+    "up without any references becoming invalid."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### -- Rc<T> is like a SHARED TV in a FAMILY room --\n",
+    "\n",
+    "<iframe src=\"https://giphy.com/embed/l2Je7CCBAFvpz5bfa\" width=\"480\" height=\"364\" frameBorder=\"0\" class=\"giphy-embed\" allowFullScreen></iframe><p><a href=\"https://giphy.com/gifs/season-9-the-simpsons-9x20-l2Je7CCBAFvpz5bfa\">via GIPHY</a></p>\n",
     "\n",
     "Imagine Rc<T> as a TV in a family room. When one person enters to watch TV, they  \n",
     "turn it on. Others can come into the room and watch the TV. When the last person  \n",
@@ -1875,6 +1938,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### -- Reference Count => unknown OWNER at compile time --\n",
+    "\n",
     "We use the Rc<T> type when we want to allocate some data on the heap for  \n",
     "multiple parts of our program to read and we can’t determine at compile time  \n",
     "which part will finish using the data last. If we knew which part would finish  \n",
@@ -1986,6 +2051,8 @@
     "For more information about this error, try `rustc --explain E0382`.\n",
     "error: could not compile `cons-list` due to previous error\n",
     "```\n",
+    "\n",
+    "#### -- Compile Error : Trying Access MOVED data  --\n",
     "\n",
     "The Cons variants own the data they hold : \n",
     "\n",
